--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/native-stack": "^6.6.1",
     "@types/react-native": "^0.67.6",
     "expo": "~44.0.0",
+    "expo-constants": "^13.0.2",
     "expo-google-app-auth": "~8.3.0",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
     "firebase": "^9.6.11",
