--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-deck-swiper": "^2.0.5",
+    "react-native-image-picker": "^4.8.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "tailwind-react-native-classnames": "^1.5.1",
